tweaks with expert advice

--- a/fipy-1a-orig.ipynb
+++ b/fipy-1a-orig.ipynb
@@ -33,10 +33,10 @@
     "import os\n",
     "import pandas as pd\n",
     "import psutil\n",
-    "import sympy.abc\n",
+    "# import sympy.abc\n",
     "\n",
     "from IPython.display import display, update_display\n",
-    "from sympy import Eq, diff, expand, factor, symbols\n",
+    "# from sympy import Eq, diff, expand, factor, symbols\n",
     "from tqdm import tqdm\n",
     "import time\n",
     "\n",
@@ -130,15 +130,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fchem = sympy.abc.rho * (sympy.abc.c - sympy.abc.alpha)**2 \\\n",
-    "                      * (sympy.abc.beta - sympy.abc.c)**2\n",
+    "# fchem = sympy.abc.rho * (sympy.abc.c - sympy.abc.alpha)**2 \\\n",
+    "#                       * (sympy.abc.beta - sympy.abc.c)**2\n",
     "\n",
-    "display(Eq(symbols(\"f\"), fchem))\n",
-    "display(Eq(symbols(\"f'\"), factor(diff(fchem,\n",
-    "                                     sympy.abc.c))))\n",
-    "display(Eq(symbols(\"f''\"), factor(expand(diff(fchem,\n",
-    "                                             sympy.abc.c,\n",
-    "                                             sympy.abc.c)))))"
+    "# display(Eq(symbols(\"f\"), fchem))\n",
+    "# display(Eq(symbols(\"f'\"), factor(diff(fchem,\n",
+    "#                                      sympy.abc.c))))\n",
+    "# display(Eq(symbols(\"f''\"), factor(expand(diff(fchem,\n",
+    "#                                              sympy.abc.c,\n",
+    "#                                              sympy.abc.c)))))"
    ]
   },
   {
@@ -278,8 +278,9 @@
     "df = None\n",
     "\n",
     "def update_energy():\n",
-    "    nrg = numerix.sum(fc - 0.5 * κ * numerix.dot(c.grad, c.grad))\n",
-    "    mas = numerix.sum(c)\n",
+    "    # Integration of fields: CellVolumeAverage, .sum(), \n",
+    "    nrg = (fc - 0.5 * κ * numerix.dot(c.grad, c.grad)).sum()\n",
+    "    mas = c.sum()\n",
     "    mem = proc.memory_info().rss / 1024**2\n",
     "    if time_has_ns:\n",
     "        timer = 1e-9 * (time.time_ns() - startTime)\n",
