--- a/fipy-1a-orig.ipynb
+++ b/fipy-1a-orig.ipynb
@@ -26,21 +26,10 @@
    },
    "outputs": [],
    "source": [
-    "%matplotlib inline\n",
     "import gc\n",
-    "import ipywidgets as widgets\n",
-    "import matplotlib.pyplot as plt\n",
     "import os\n",
-    "import pandas as pd\n",
     "import psutil\n",
-    "# import sympy.abc\n",
-    "\n",
-    "from IPython.display import display, update_display\n",
-    "# from sympy import Eq, diff, expand, factor, symbols\n",
-    "from tqdm import tqdm\n",
     "import time\n",
-    "\n",
-    "from steppyngstounes import CheckpointStepper, PIDStepper\n",
     "\n",
     "from fipy import Variable, FaceVariable, CellVariable\n",
     "from fipy import DiffusionTerm, ImplicitSourceTerm, TransientTerm\n",
@@ -48,10 +37,9 @@
     "\n",
     "from fipy import PeriodicGrid2D as Grid2D\n",
     "from fipy.solvers.petsc import LinearLUSolver as Solver\n",
+    "from fipy.solvers.petsc.comms import petscCommWrapper\n",
     "\n",
-    "cos = numerix.cos\n",
-    "pi = numerix.pi\n",
-    "proc = psutil.Process()"
+    "from steppyngstounes import CheckpointStepper, PIDStepper"
    ]
   },
   {
@@ -66,7 +54,14 @@
     "    time_has_ns = True\n",
     "except AttributeError:\n",
     "    startTime = time.time()\n",
-    "    time_has_ns = False"
+    "    time_has_ns = False\n",
+    "\n",
+    "cos = numerix.cos\n",
+    "pi = numerix.pi\n",
+    "proc = psutil.Process()\n",
+    "\n",
+    "comm = petscCommWrapper.PETScCommWrapper()\n",
+    "procID = parallel.procID"
    ]
   },
   {
@@ -88,19 +83,34 @@
     "dx = dy = 1\n",
     "Lx = nx * dx\n",
     "Ly = ny * dy\n",
-    "mesh = Grid2D(nx=nx, ny=ny, dx=dx, dy=dy)"
+    "\n",
+    "mesh = Grid2D(nx=nx, ny=ny, dx=dx, dy=dy)\n",
+    "x, y = mesh.cellCenters\n",
+    "\n",
+    "c = CellVariable(mesh=mesh, name=r\"$c$\",   value=0.0, hasOld=True)\n",
+    "μ = CellVariable(mesh=mesh, name=r\"$\\mu$\", value=0.5, hasOld=True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fc0e7b64",
+   "metadata": {},
+   "source": [
+    "### Set thermo-kinetic constants from the BM1 specification"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f48b25d7",
+   "id": "fa2090dd",
    "metadata": {},
    "outputs": [],
    "source": [
-    "x, y = mesh.cellCenters\n",
-    "c = CellVariable(mesh=mesh, name=r\"$c$\",   value=0.0, hasOld=True)\n",
-    "μ = CellVariable(mesh=mesh, name=r\"$\\mu$\", value=0.5, hasOld=True)"
+    "α = 0.3\n",
+    "β = 0.7\n",
+    "ρ = 5\n",
+    "κ = 2\n",
+    "M = 5"
    ]
   },
   {
@@ -110,17 +120,21 @@
    "source": [
     "## Define equations of motion\n",
     "\n",
-    "This is based on [fipy.examples.cahnHilliard.mesh2DCoupled](https://www.ctcms.nist.gov/fipy/examples/cahnHilliard/generated/examples.cahnHilliard.mesh2DCoupled.html). The coupled equations are\n",
+    "This is based on [fipy.examples.cahnHilliard.mesh2DCoupled],\n",
+    "using a first-order Taylor series substitution in place of the bulk free energy \"source term\".\n",
+    "The coupled equations are\n",
     "\n",
     "$$\n",
-    "\\frac{\\partial c}{\\partial t} = \\nabla \\cdot \\nabla\\mu\n",
+    "\\frac{\\partial c}{\\partial t} = \\nabla \\cdot M\\nabla\\mu\n",
     "$$\n",
     "\n",
     "$$\n",
-    "\\mu = \\left(\\frac{\\partial f}{\\partial c} - \\frac{\\partial^2 f}{\\partial c^2} \\cdot c\\right)_{\\mathrm{old}} + \\frac{\\partial^2 f}{\\partial c^2}\\cdot c - \\kappa \\nabla^2 c\n",
+    "\\mu = \\left(\\frac{\\partial f_{\\mathrm{bulk}}}{\\partial c} - \\frac{\\partial^2 f_{\\mathrm{bulk}}}{\\partial c^2} \\cdot c\\right)_{\\mathrm{old}} + \\frac{\\partial^2 f_{\\mathrm{bulk}}}{\\partial c^2}\\cdot c - \\kappa \\nabla^2 c\n",
     "$$\n",
     "\n",
-    "where the second term on $\\mu$ is an `ImplicitSourceTerm` and the last is a `DiffusionTerm`."
+    "where the second term on $\\mu$ is an `ImplicitSourceTerm` and the last is a `DiffusionTerm`.\n",
+    "\n",
+    "[fipy.examples.cahnHilliard.mesh2DCoupled]: https://www.ctcms.nist.gov/fipy/examples/cahnHilliard/generated/examples.cahnHilliard.mesh2DCoupled.html"
    ]
   },
   {
@@ -130,15 +144,21 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# fchem = sympy.abc.rho * (sympy.abc.c - sympy.abc.alpha)**2 \\\n",
-    "#                       * (sympy.abc.beta - sympy.abc.c)**2\n",
+    "\"\"\"\n",
+    "## Uncomment and run this cell to double-check the derivatives.\n",
     "\n",
-    "# display(Eq(symbols(\"f\"), fchem))\n",
-    "# display(Eq(symbols(\"f'\"), factor(diff(fchem,\n",
-    "#                                      sympy.abc.c))))\n",
-    "# display(Eq(symbols(\"f''\"), factor(expand(diff(fchem,\n",
-    "#                                              sympy.abc.c,\n",
-    "#                                              sympy.abc.c)))))"
+    "import sympy.abc\n",
+    "from sympy import Eq, diff, expand, factor, symbols\n",
+    "fbulk = sympy.abc.rho * (sympy.abc.c - sympy.abc.alpha)**2 \\\n",
+    "                      * (sympy.abc.beta - sympy.abc.c)**2\n",
+    "\n",
+    "display(Eq(symbols(\"f\"), fchem))\n",
+    "display(Eq(symbols(\"f'\"), factor(diff(fchem,\n",
+    "                                      sympy.abc.c))))\n",
+    "display(Eq(symbols(\"f''\"), factor(expand(diff(fbulk,\n",
+    "                                             sympy.abc.c,\n",
+    "                                             sympy.abc.c)))))\n",
+    "\"\"\""
    ]
   },
   {
@@ -146,11 +166,13 @@
    "id": "9df0bb19",
    "metadata": {},
    "source": [
-    "$$f_{\\mathrm{c}} = \\rho (c - \\alpha)^2 (\\beta - c)^2$$\n",
+    "The free energy density and its first two derivatives are (refactored after SymPy)\n",
     "\n",
-    "$$f'_{\\mathrm{c}} = 2\\rho (c - \\alpha)(\\beta - c)(\\alpha - 2c + \\beta)$$\n",
+    "$$f_{\\mathrm{bulk}} = \\rho (c - \\alpha)^2 (\\beta - c)^2$$\n",
     "\n",
-    "$$f''_{\\mathrm{c}} = 2\\rho\\left\\{\\alpha^2 + 4 \\alpha \\beta + \\beta^2 - 6 c \\left(\\alpha - c + \\beta\\right)\\right\\}$$"
+    "$$f'_{\\mathrm{bulk}} = 2\\rho (c - \\alpha)(\\beta - c)(\\alpha - 2c + \\beta)$$\n",
+    "\n",
+    "$$f''_{\\mathrm{bulk}} = 2\\rho\\left\\{\\alpha^2 + 4 \\alpha \\beta + \\beta^2 - 6 c \\left(\\alpha - c + \\beta\\right)\\right\\}$$"
    ]
   },
   {
@@ -160,14 +182,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "α = 0.3\n",
-    "β = 0.7\n",
-    "ρ = 5\n",
-    "\n",
-    "fc = ρ * (c - α)**2 * (β - c)**2\n",
-    "dfdc = 2 * ρ * (c - α) * (β - c) * (α - 2 * c + β)\n",
-    "d2fc = 2 * ρ * (α**2 + 4*α*β + β**2 \\\n",
-    "                  - 6 * c * (α - c + β))"
+    "fbulk = ρ * (c - α)**2 * (β - c)**2\n",
+    "d1fdc = 2 * ρ * (c - α) * (β - c) * (α - 2 * c + β)\n",
+    "d2fdc = 2 * ρ * (α**2 + 4*α*β + β**2 - 6 * c * (α - c + β))"
    ]
   },
   {
@@ -177,13 +194,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "κ = 2\n",
-    "M = 5\n",
-    "\n",
     "eom_c = TransientTerm(var=c) == DiffusionTerm(coeff=M, var=μ)\n",
+    "\n",
     "eom_μ = ImplicitSourceTerm(coeff=1.0, var=μ) \\\n",
-    "     == (dfdc - d2fc * c) \\\n",
-    "      + ImplicitSourceTerm(coeff=d2fc, var=c) \\\n",
+    "     == (d1fdc - d2fdc * c) \\\n",
+    "      + ImplicitSourceTerm(coeff=d2fdc, var=c) \\\n",
     "      - DiffusionTerm(coeff=κ, var=c)\n",
     "\n",
     "eom = eom_c & eom_μ"
@@ -194,7 +209,22 @@
    "id": "cb5839aa",
    "metadata": {},
    "source": [
-    "## Initial Conditions"
+    "## Initial Conditions -- As Specified"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "63ddef17",
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [],
+   "source": [
+    "iodir = \"1a.0\"\n",
+    "\n",
+    "if not os.path.exists(iodir):\n",
+    "    os.mkdir(iodir)"
    ]
   },
   {
@@ -204,7 +234,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "t = Variable(0)\n",
+    "t = Variable(0.0)\n",
     "dt = Variable(1e-5)\n",
     "\n",
     "c0 = 0.5\n",
@@ -234,30 +264,7 @@
     "c.value = initialize(A0, B0)\n",
     "\n",
     "c.updateOld()\n",
-    "μ.updateOld()\n",
-    "\n",
-    "iodir = \"1a.0\"\n",
-    "\n",
-    "if not os.path.exists(iodir):\n",
-    "    os.mkdir(iodir)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "1afe841b",
-   "metadata": {
-    "scrolled": false
-   },
-   "outputs": [],
-   "source": [
-    "viewer = Viewer(vars=(c,), datamin=0., datamax=1., cmap=\"coolwarm\")\n",
-    "\n",
-    "def write_img():\n",
-    "    viewer.title = r\"$t=%g$\" % t\n",
-    "    viewer.plot(\"{iodir}/comp_{t:0>12.0f}.png\")\n",
-    "    \n",
-    "write_img()"
+    "μ.updateOld()"
    ]
   },
   {
@@ -277,31 +284,39 @@
    "source": [
     "df = None\n",
     "\n",
-    "def update_energy():\n",
-    "    # Integration of fields: CellVolumeAverage, .sum(), \n",
-    "    nrg = (fc - 0.5 * κ * numerix.dot(c.grad, c.grad)).sum()\n",
-    "    mas = c.sum()\n",
-    "    mem = proc.memory_info().rss / 1024**2\n",
-    "    if time_has_ns:\n",
-    "        timer = 1e-9 * (time.time_ns() - startTime)\n",
-    "    else:\n",
-    "        timer = time.time() - startTime\n",
-    "    if parallel.procID == 0:\n",
-    "        labs = [\"wall_time\", \"time\", \"free_energy\",\n",
-    "                \"mem_MB\", \"timestep\", \"mass\"]\n",
-    "        vals = [[timer, t, nrg, mem, dt, mas]]\n",
-    "        indx = [0] if df is None \\\n",
-    "                   else [len(df)]\n",
-    "        \n",
-    "        return pd.concat([df,\n",
-    "                          pd.DataFrame(vals,\n",
-    "                                       columns=labs,\n",
-    "                                       index=indx)]\n",
-    "                        )\n",
-    "   \n",
-    "df = update_energy()\n",
+    "labs = [\n",
+    "    \"wall_time\", \n",
+    "    \"time\",     \n",
+    "    \"free_energy\",\n",
+    "    \"mem_GB\",    \n",
+    "    \"timestep\", \n",
+    "    \"mass\"\n",
+    "]\n",
     "\n",
-    "# disp_nrg = display(df.tail(), display_id=\"nrg\")"
+    "if procID == 0:  # write the CSV header\n",
+    "    fcsv = \"{}/energy.csv\".format(iodir)\n",
+    "    with open(fcsv, \"w\") as fh:\n",
+    "        fh.write(\"{},{},{},{},{},{}\\n\".format(*labs))\n",
+    "else:\n",
+    "    fcsv = None\n",
+    "\n",
+    "def update_energy(fh=None):\n",
+    "    # Integration of fields: CellVolumeAverage, .sum(), \n",
+    "    nrg = (fbulk - 0.5 * κ * numerix.dot(c.grad, c.grad)).sum()\n",
+    "    mas = c.sum()\n",
+    "    mem = comm.allgather(proc.memory_info().rss) / 1024**3\n",
+    "    if procID == 0:\n",
+    "        if time_has_ns:\n",
+    "            timer = 1e-9 * (time.time_ns() - startTime)\n",
+    "        else:\n",
+    "            timer = time.time() - startTime\n",
+    "    \n",
+    "        vals = [timer, t, nrg, mem, dt, mas]\n",
+    "        \n",
+    "        with open(fcsv, \"a\") as fh:\n",
+    "            fh.write(\"{},{},{},{},{},{}\\n\".format(*vals))\n",
+    "        \n",
+    "update_energy(fcsv)"
    ]
   },
   {
@@ -323,10 +338,13 @@
     "rtol = 1e-3\n",
     "solver = Solver()\n",
     "\n",
-    "# Write an image every 1, 2, 5, 10, 20, 50, ...\n",
+    "# Write to disk every 1, 2, 5, 10, 20, 50, ...\n",
     "chkpts = [p * 10**q \\\n",
-    "          for q in range(6) \\\n",
-    "          for p in (1, 2, 5)]"
+    "          for q in range(3) \\\n",
+    "          for p in (1, 2, 5)]\n",
+    "\n",
+    "print(\"Writing a checkpoint at the following times:\")\n",
+    "print(chkpts)"
    ]
   },
   {
@@ -337,7 +355,7 @@
    "outputs": [],
    "source": [
     "for check in CheckpointStepper(start=0.0,\n",
-    "                               stops=chkpts\n",
+    "                               stops=chkpts,\n",
     "                               stop=fin):\n",
     "    for step in PIDStepper(start=check.begin,\n",
     "                           stop=check.end, \n",
@@ -350,7 +368,8 @@
     "            dt = step.size\n",
     "            c.updateOld()\n",
     "            μ.updateOld()\n",
-    "            df = update_energy()\n",
+    "            # df = update_energy()\n",
+    "            update_energy(fcsv)\n",
     "        else:\n",
     "            c.value = c.old\n",
     "            μ.value = μ.old\n",
@@ -359,8 +378,8 @@
     "        \n",
     "    if check.succeeded():\n",
     "        dt = step.want\n",
-    "        df.to_csv(\"{iodir}/energy.csv.gz\")\n",
-    "        write_img()\n",
+    "        # df.to_csv(\"{}/energy.csv.gz\".format(iodir))\n",
+    "        # write_img()\n",
     "        # update_display(df.tail(), display_id=\"nrg\")\n",
     "        # update_display(viewer.plot(), display_id=\"plt\")\n",
     "        # viewer.title = r\"$t=%g$\" % t\n",
