functional non-periodic line in the sand

--- a/fipy-1a-orig.ipynb
+++ b/fipy-1a-orig.ipynb
@@ -35,7 +35,8 @@
     "from fipy import DiffusionTerm, ImplicitSourceTerm, TransientTerm\n",
     "from fipy import numerix, parallel, Viewer\n",
     "\n",
-    "from fipy import PeriodicGrid2D as Grid2D\n",
+    "from fipy import Grid2D\n",
+    "# from fipy import PeriodicGrid2D as Grid2D\n",
     "from fipy.solvers.petsc import LinearLUSolver as Solver\n",
     "from fipy.solvers.petsc.comms import petscCommWrapper\n",
     "\n",
@@ -368,7 +369,6 @@
     "            dt = step.size\n",
     "            c.updateOld()\n",
     "            μ.updateOld()\n",
-    "            # df = update_energy()\n",
     "            update_energy(fcsv)\n",
     "        else:\n",
     "            c.value = c.old\n",
