pictures of initial conditions

--- a/fipy-1a-orig.ipynb
+++ b/fipy-1a-orig.ipynb
@@ -25,6 +25,9 @@
     "    \\right\\}\n",
     "$$\n",
     "\n",
+    "![Original initial condition](img/bm1-orig.png)\n",
+    "*Original initial condition*\n",
+    "\n",
     "## peri\n",
     "\n",
     "Using even integer coefficients, this initial condition is exactly periodic at the boundary.\n",
@@ -45,6 +48,12 @@
     "             - \\frac{2\\pi}{L_\\mathrm{y}} y\\right)\n",
     "    \\right\\}\n",
     "$$\n",
+    "\n",
+    "![Periodic initial condition](img/bm1-peri.png)\n",
+    "*Periodic initial condition*\n",
+    "\n",
+    "The clearly repeating features, especially down the center,\n",
+    "are highly uncharacteristic of real microstructures.\n",
     "\n",
     "## zany\n",
     "\n",
@@ -67,6 +76,11 @@
     "    \\right\\}\n",
     "$$\n",
     "\n",
+    "![Perturbed initial condition](img/bm1-zany.png)\n",
+    "*Perturbed initial condition*\n",
+    "\n",
+    "Note the similarities, but also clearly non-periodic features.\n",
+    "This is a much better starting point for framework comparisons.\n",
     "\n",
     "<!-- links -->\n",
     "[FiPy]: https://www.ctcms.nist.gov/fipy\n",
