fix high-profile typo

--- a/fourier-interpolation.ipynb
+++ b/fourier-interpolation.ipynb
@@ -9,7 +9,7 @@
     "\n",
     "> _h/t Steve DeWitt (ORNL) for the concept and Daniel Wheeler (NIST) for the derivation_\n",
     "\n",
-    "We have data $v$ on a coarse mesh $\\mathrm{X}$ that we wish to compare to a gold standard field $u$ on a fine mesh $\\mathrm{X}$.  \n",
+    "We have data $v$ on a coarse mesh $\\mathrm{X}$ that we wish to compare to a gold standard field $u$ on a fine mesh $\\mathrm{Y}$.  \n",
     "This is simplest to implement by zero-padding the Fourier-transformed data $\\hat{v}$ to match the shape of $\\mathrm{Y}$, then transforming back to real space.  \n",
     "Conceptually, this involves some work.\n",
     "\n",
