Test random noise IC as well

--- a/fourier-interpolation.ipynb
+++ b/fourier-interpolation.ipynb
@@ -132,7 +132,7 @@
     "    Interpolate the coarse field data $v$ onto a mesh of shape $M$\n",
     "    \"\"\"\n",
     "    v_hat = np.fft.fftshift(np.fft.fftn(v))\n",
-    "    u_hat = pad(v_hat, np.flip(M))\n",
+    "    u_hat = pad(v_hat, np.flip(M))  # transpose (x, y): this will break in 3D atm.\n",
     "    scale = np.prod(np.array(u_hat.shape)) / np.prod(np.array(v.shape))\n",
     "    u = scale * np.fft.ifftn(np.fft.ifftshift(u_hat)).real\n",
     "    return u\n",
